Fix tail text going off screen
- On larger monitors the tail text line height can cause either font to
  go of screen or to create unintentional space below the generator.
  This fix will prevent that from happening

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,13 +252,15 @@ input[type="color"] {
 
 #result-bottom {
   display: none;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 3;
-  grid-row-end: 4;
-  justify-content: center;
-  text-align: center;
-  align-self: center;
+}
+
+#gen-tail-span {
+  font-size: 5vw;
+  position: absolute;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 #results-list {
@@ -293,11 +295,6 @@ input[type="color"] {
   margin: 0 auto;
   padding: 0 0 20px 0;
   line-height: 120%;
-}
-
-#gen-tail-span {
-  line-height: 70%;
-  font-size: 5vw;
 }
 
 button {
